--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Gulp Officevibe</title>
-</head>
-<link rel="stylesheet" href="build/css/main.css">
-<script src="build/bundle.js"></script>
-<body>
-<h1>h3</h1>
-<a href="">testf</a>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Insolent Woof</title>
+
+    <link rel="stylesheet" href="build/css/main.css">
+    <script src="build/bundle.js"></script>
+  </head>
+
+  <body>
+
+    <h1>Insolent Woof</h1>
+    <a href="">testf</a>
+
+  </body>
 </html>
